force-app/main/default/objects/Book__c/fields/BookQty__c.field-meta.xml
<CustomField>
    <fullName>BookQty__c</fullName>
    <label>BookQty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>