force-app/main/default/objects/Book__c/fields/Tota_Cost__c.field-meta.xml
<CustomField>
    <fullName>Tota_Cost__c</fullName>
    <formula>BookQty__c  *  Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tota Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>